# mediawiki-api-mcp

./: .gitignore  README.md  claude_desktop_config_template.json  codemcp.toml  pyproject.toml  update_imports.py  validate_structure.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
docs/tools/: wiki_meta_siteinfo.md  wiki_opensearch.md  wiki_page_compare.md  wiki_page_delete.md  wiki_page_edit.md  wiki_page_get.md  wiki_page_move.md  wiki_page_parse.md  wiki_page_undelete.md  wiki_search.md
mediawiki_api_mcp/: __init__.py  client.py  config.py  server.py
mediawiki_api_mcp/client_modules/: __init__.py  client_auth.py  client_meta.py  client_page.py  client_page_fixed.py  client_search.py
mediawiki_api_mcp/handlers/: __init__.py  search.py  wiki_meta_siteinfo.py  wiki_opensearch.py  wiki_page_compare.py  wiki_page_delete.py  wiki_page_edit.py  wiki_page_get.py  wiki_page_move.py  wiki_page_parse.py  wiki_page_undelete.py  wiki_search.py
mediawiki_api_mcp/server_tools/: __init__.py  wiki_meta_siteinfo.py  wiki_opensearch.py  wiki_page_compare.py  wiki_page_delete.py  wiki_page_edit.py  wiki_page_get.py  wiki_page_move.py  wiki_page_parse.py  wiki_page_undelete.py  wiki_search.py
mediawiki_api_mcp/tools/: __init__.py  (+6 more)
tests/: __init__.py  test_edit.py  test_search.py  test_server.py  test_tools.py  test_wiki_meta_siteinfo.py  test_wiki_opensearch.py  test_wiki_page_compare.py  test_wiki_page_delete.py  test_wiki_page_edit.py  test_wiki_page_get.py  test_wiki_page_move.py  test_wiki_page_parse.py  test_wiki_page_undelete.py  test_wiki_search.py
